feat: cv style format

--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <p>Volha Barouskaya</p> 
-    <img alt="kotik_v_ochkakh"src="https://funart.pro/uploads/posts/2021-07/1626361156_32-funart-pro-p-kotik-v-ochkakh-zhivotnie-krasivo-foto-55.jpg" width="100" height="80"/>
-    <p>Contact:</p>
-    <ul>
-        <li>Phone: 511422043</li>
-        <li>E-mail: barouskayavolha@gmail.com</li>
-        <li>GitHub:<a href="https://github.com/Volhabo" target="_blank">Volhabo</a></li>
-    </ul>
+    <header>
+        <p class="main-paragraph">Volha Barouskaya</p> 
+    </header>
+        <img alt="kotik_v_ochkakh"src="https://funart.pro/uploads/posts/2021-07/1626361156_32-funart-pro-p-kotik-v-ochkakh-zhivotnie-krasivo-foto-55.jpg" width="100" height="80"/>
+    
+    <main>
+     <p>Contact:</p>
+        <ul>
+         <li>Phone: 511422043</li>
+         <li>E-mail: barouskayavolha@gmail.com</li>
+         <li>GitHub:<a href="https://github.com/Volhabo" target="_blank">Volhabo</a></li>
+     </ul>    
+    </main>    
+   
+
     <p>About me:</p>
-    <p>Professional specialist in educational with 5+ years of experience in university teaching. Security systems design experience, including such systems as fire alarm, access control and restriction, etc.</p>
+    Professional specialist in educational with 5+ years of experience in university teaching. Security systems design experience, including such systems as fire alarm, access control and restriction, etc.
     <p>Skills</p>
     <ul>
         <li>Java (Basic)</li>
@@ -24,12 +32,26 @@
     </ul>
     <p>Code Example</p>
     <a href="https://www.codewars.com/kata/55a2d7ebe362935a210000b2/train/java"target="_blank">Task from codewars</a>
-    <img src=""/>
+    <p class="code-paragraph"><code>
+        public static int findSmallestInt(int[] args) {<Br>
+            int min = args[0];<Br>
+            for (int i = 1; i < args.length; i++) {<Br>
+                if (args[i] < min) {<Br>
+                    min = args[i];<Br>
+                }<Br>
+            }<Br>
+            return min;<Br>
+        }<Br>
+    </code> </p>
+
+    <footer>
     <p>Education</p>
     <ul>
         <li>University: Belarusian State University of Informatics And Radioelectronics</li>
         <li>Courses: QAForEveryone</li>
     </ul>
+    </footer>
+
     <p>Languages</p>
     <ul>
         <li>Russian - Native</li>
