fix:change html,css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li>GitHub: 
                         <a href="https://github.com/Volhabo" target="_blank"> Volhabo</a>
                     </li>
-                    <li>Discord: Volha#6433</li>
+                    <li>Discord: Volha (@Volhabo)</li>
                     <li>E-mail: barouskayavolha@gmail.com</li>
                 </ul>              
                                 
@@ -61,17 +61,22 @@
                 <a href="https://www.codewars.com/kata/55a2d7ebe362935a210000b2/train/java" target="_blank">
                     <p>Task from codewars</p>
                 </a>
-                <code class="list-code">
-                    <pre>public static int findSmallestInt(int[] args) {
-                          int min = args[0];
-                          for (int i = 1; i &lt args.length; i++) {
-                            if (args[i] &lt min) {
-                                min = args[i];
+                <div  class="list-code">
+                    <pre>
+                        <code>
+                            public static int findSmallestInt(int[] args) {
+                                int min = args[0];
+                                for (int i = 1; i &lt; args.length; i++) {
+                                    if (args[i] &lt; min) {
+                                        min = args[i];
+                                    }
+                                }
+                                return min;
                             }
-                          }
-                          return min;
-                         }</pre>
-                </code> 
+                        </code>
+                    </pre>
+                </div>
+                 
             </div>    
         </section>    
         <section class="list-section">
@@ -99,7 +104,7 @@
         <a href="https://github.com/Volhabo" target="_blank">Volhabo</a>
         <p>2022</p>
         <a href="https://rs.school/js/" target="_blank">
-            <img src="https://rs.school/images/rs_school_js.svg" alt="rs_school logo" width="40" heigt="40">
+            <img src="https://rs.school/images/rs_school_js.svg" alt="rs_school logo" width="40" height="40">
         </a>
     </footer>
 
